Update test.sh