@@ -11,7 +11,7 @@ cd ..
 cp tpch-dbgen/orders.tbl data 
 
 #build and test
-export MAVEN_OPTS="-Xms2m -Xmx4g -XX:+PrintGC"
+export MAVEN_OPTS="-Xms1g -Xmx4g"
 BUILD_COMMAND="mvn -Dtest=TestPerf test"
 echo "\nTesting with..."
 echo "\$ $BUILD_COMMAND\n"
